# ct2xfasta

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ct2xfasta/: __init__.py  cli.py  parsers.py  utils.py  validate.py  writer.py
tests/: test_cli.py  test_ct.py  test_dbn_bpseq.py
