[project]
name = "ct2xfasta"
version = "0.1.0"
description = "Convert CT RNA structures to 4SALE-compatible XFasta"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
ct2xfasta = "ct2xfasta.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []